--- a/reports_and_databases.tex
+++ b/reports_and_databases.tex
@@ -554,3 +554,46 @@ are, then do the positioning for you.}. 为打印机写一个 awk 程序, 该程
     }
     ' countries
 \end{awkcode}
+程序开头的第二行
+\begin{awkcode}
+    $1 ~ /'$1'/
+\end{awkcode}
+第一个 \verb'$1' 指的是当前输入行的第一个字段, 而第二个 \verb'$1' (被单引号
+包围着的)指的是国家名称参数, 也就是执行 shell 命令 \verb'info' 时的第一个参
+数. 第二个 \verb'$1' 只对shell可见, 当命令被执行时, 它被 \verb'info' 后面 
+的字符串所替代. 具体过程是 shell 通过拼接三个字符串来组合成 awk程序, 这三 
+个字符串其中两个是被一对单引号包围起来的多行文本, 另外一个是 \verb'$1',
+即 \texttt{info} 的参数. 需要注意的是, 可以把任意一个正则表达式传递给
+\texttt{info}, 尤其是, 我们可以只给出国家名称的一部分, 或者一次指定多个国家
+名, 也可以查询到相关的国家信息, 比如 
+\begin{awkcode}
+    info 'Can|USA'
+\end{awkcode}
+
+\begin{exercise}
+    修改 \texttt{info}, 使得参数通过 \texttt{ARGV} 传递进来, 而不是由 shell 
+    进行替换.
+\end{exercise}
+
+\subsection{套用信函}
+\label{subsec:form_letters}
+
+Awk 也可以用于生成套用信函,
+只需要用参数替换套用信函中的文本即可\footnote{TODO}:
+% TODO
+套用信函的文本内容存放在文件 \filename{letter.text} 中,文本中包含了许多参
+数, 只需要通过参数替换, 就可以生成不同内容的信函\footnote{原文为 The text
+    contains parameters that will be replaced by a set of parameter values
+for each form letter that is generated.}. 例如, 下面的文本使用了参数 
+\verb'#1' 到 \verb'#4', 这些参数分别表示国家名称, 人口, 面积, 以及人口密度:
+\marginpar{101}
+\begin{shell}
+    Subject: Demographic Information About #1
+    From: AWK Demographics, Inc.
+
+    In response to your request for information about #1,
+    our latest research has revealed that its population is #2
+    million people and its area is #3 million square miles.
+    This gives #1 a population density of #4 people per
+    square mile.
+\end{shell}
