更新 README: 纠正了一个英文语法错误

--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 The AWK Programming Language, by Aho, Kernighan, and Weinberger, published
-by Addison-Wesley in 1988. This project aim to translate the book into 
+by Addison-Wesley in 1988. This project aim to translate this book into
 Chinese, and typesetted by LaTeX.
 
 The AWK Programming Language 的中文翻译项目, 使用 LaTeX 排版, 光凭我一个人
