complete a TODO in page 98/210.

--- a/preamble.tex
+++ b/preamble.tex
@@ -6,6 +6,8 @@
 \usepackage{geometry}
 \usepackage{fontspec}
 \usepackage{xeCJK}
+% for tikz
+\usepackage{tikz}
 \usepackage{hyperref}
 %\usepackage{fancyhdr}
 \usepackage{verbatim}
