review stop at 102/210 pages

--- a/reports_and_databases.tex
+++ b/reports_and_databases.tex
@@ -666,7 +666,7 @@ for each form letter that is generated.}. 例如, 下面的文本使用了参数
 就没那么容易看出来. 多个文件组成的数据库维护起来更容易, 这主要是因为编辑
 一个只含有少量字段的文件, 要比编辑一个包含全部字段的文件容易得多. 另外,
 利用本节开发的数据库系统, 我们就有可能在不改变数据库访问程序的情况下,
-重构数据库. 最后, 对于小查询来说, 访问一个小文件要比访问一个大文件高效
+重构数据库. 最后, 对于简单的查询来说, 访问一个小文件要比访问一个大文件高效
 得多. 另一方面, 当我们往数据库添加数据时, 必须小心修改所有的相关文件, 
 否则会带来一致性问题.
 
@@ -674,7 +674,7 @@ for each form letter that is generated.}. 例如, 下面的文本使用了参数
 的文件 \filename{countries} 组成, 文件的每一行都包括四个字段, 字段的名字
 分别是 \verb'country', \verb'area', \verb'population', 以及
 \verb'continent'. 现在我们打算在数据库中新增一个文件 \filename{capitals},
-文件的每一行都由两个字段组成, 国家及其首都:
+文件的每一行都由两个字段组成 ---- 国家及其首都:
 \begin{shell}
     USSR	Moscow
     Canada	Ottawa
