--- a/preamble.tex
+++ b/preamble.tex
@@ -15,6 +15,8 @@
 \usepackage{caption}
 % for exercise 
 \usepackage{theorem}
+% for format of contents
+\usepackage{tocloft}
 
 % from package geometry
 % 为边注加边框
@@ -128,6 +130,13 @@
 \theoremheaderfont{\bfseries}
 \theorembodyfont{\normalfont}
 \newtheorem{exercise}{Exercise}[chapter]
+
+% 设置目录中 subsection 的缩进
+\settowidth\cftsubsecindent{2}
+% 设置目录中 chapter 章节编号的宽度 (ctex 章节编号为中文, 需要特别注意).
+% 参考 <<LaTeX 入门>>, 刘海洋 编著, 电子工业出版社, 2013.6
+\settowidth\cftchapnumwidth{第十章} % 最宽的可能编号
+\renewcommand\cftchapaftersnumb{\hspace{0.5em}} % 额外间距
 
 \title{AWK 程序设计语言}
 \author{Alfred V.Aho \and Brian W.Kernighan \and Peter J.Weinberger \and
