添加 PDF 文档属性.
添加的属性包括:
	1) pdf 标题		pdftitle
	2) 创建该 pdf 的人	pdfcreator
	3) pdf 的内容原作者	pdfauthor
	4) pdf 的主题		pdfsubject
	5) pdf 的关键词		pdfkeywords

--- a/preamble.tex
+++ b/preamble.tex
@@ -42,7 +42,12 @@
 
 % from package hyperref
 \hypersetup{
-    bookmarksnumbered = true
+    bookmarksnumbered = true,
+    pdftitle = {The AWK Programming Language},
+    pdfcreator = {wuzhouhui250@gmail.com},
+    pdfauthor = {Alfred V. Aho, Brian W. Kernighan, Peter J. Weinberger},
+    pdfsubject = {awk programming},
+    pdfkeywords = {awk, pattern scanning, text processing}
 }
 
 % from package fontspec and xeCJK
