--- a/preamble.tex
+++ b/preamble.tex
@@ -19,6 +19,8 @@
 \usepackage{tocloft}
 % for number of footnote 
 \usepackage{pifont}
+% 一页结束时, 脚注编号清零
+\usepackage[perpage]{footmisc}
 
 % 脚注编号带圈
 \renewcommand\thefootnote{\ding{\numexpr171+\value{footnote}}}
