--- a/reports_and_databases.tex
+++ b/reports_and_databases.tex
@@ -717,7 +717,7 @@ for each form letter that is generated.}. 例如, 下面的文本使用了参数
 (\term{attribute}), 所以我们可以认为表格 \verb'capitals' 具有属性
 \verb'country' 与 \verb'capital'.
 
-一个 \term{自然连接} (\term(natural join}), 或简称为 \term{连接}, 指的是 
+一个 \term{自然连接} (\term{natural join}), 或简称为 \term{连接}, 指的是 
 一个运算, 它将两张表以公共属性为基础组合成一张表, 这张表包含了两张表所有
 的属性, 但是重复的属性会被移除. 如果我们把 \verb'countries' 与
 \verb'capitals' 这两张表作自然连接, 我们就会得到一张新表 (姑且称为
