get syntax right up to 106/210 pages

--- a/reports_and_databases.tex
+++ b/reports_and_databases.tex
@@ -871,9 +871,9 @@ a joined output line\footnote{待译}.
     \indent\textit{tablename} \par 
     \indent\indent\textit{attribute} \par 
     \indent\indent\textit{attribute} \par 
-    \indent\indent\indent\cdots     \par
+    \indent\indent\indent ...   \par
     \indent\indent\texttt{!}\texttt{command} \par
-    \indent\indent\indent\cdots
+    \indent\indent\indent ...
 \end{pattern}
 \textit{tablename} 与 \textit{attribute} 都是字符串, 在 \textit{tablename} 
 之后是该表包含的属性名列表, 每一个属性名前面都有一个空格或制表符, 属性名
