--- a/reports_and_databases.tex
+++ b/reports_and_databases.tex
@@ -345,7 +345,7 @@ Report No. 3       POPULATION, AREA, POPULATION DENSITY         January 1, 1988
 一种可选的方案是让某个程序去计算量的大小, 然后再根据你的需求进行调整 
 \footnote{原文为 An alternative is to let a program compute how big things
 are, then do the positioning for you.}. 为打印机写一个 awk 程序, 该程序
-对简单的表格进行格式化 ---- 这是一种可行的做法, 我们待会儿再回来讨论.
+对简单的表格进行格式化 --- 这是一种可行的做法, 我们待会儿再回来讨论.
 因为用的是 Unix 系统与排版程序, 所以我们可以用一些已经存在的工具 ----
 \texttt{tbl} 程序可以对表格进行格式化. 程序 \verb'form4' 非常类似于
 \verb'form3', 但是它没有用于控制列宽度的魔数, 相反, 它生成了一些 
@@ -417,7 +417,7 @@ are, then do the positioning for you.}. 为打印机写一个 awk 程序, 该程
 方式在列中打印项目, 如果是数值, 则右对齐, 并且在同一列中, 每一行的列宽度
 都是相同的 (都等于该列宽度的最大值). 如果给定头部与输入文件
 \filename{countries}, 程序的输出是\footnote{\filename{countries} 原来没有
-头部, 需要手工加上 ---- 译者注}:
+头部, 需要手工加上 --- 译者注}:
 \begin{shell}
     COUNTRY   AREA   POPULATION   CONTINENT    
     USSR      8649       275      Asia         
@@ -661,7 +661,7 @@ for each form letter that is generated.}. 例如, 下面的文本使用了参数
     \item 数据库可以分散在多个文件中, 而不是限定在一个文件上.
     \item 可以交互性地生成一个查询序列.
 \end{itemize}
-使用名字 (而非数字) 引用字段的优势是显而易见的 ---- \verb'$area' 看起来
+使用名字 (而非数字) 引用字段的优势是显而易见的 --- \verb'$area' 看起来
 比 \verb'$2' 更加自然, 但是, 把一个数据库分散存储在若干个文件中的优点
 就没那么容易看出来. 多个文件组成的数据库维护起来更容易, 这主要是因为编辑
 一个只含有少量字段的文件, 要比编辑一个包含全部字段的文件容易得多. 另外,
@@ -674,7 +674,7 @@ for each form letter that is generated.}. 例如, 下面的文本使用了参数
 的文件 \filename{countries} 组成, 文件的每一行都包括四个字段, 字段的名字
 分别是 \verb'country', \verb'area', \verb'population', 以及
 \verb'continent'. 现在我们打算在数据库中新增一个文件 \filename{capitals},
-文件的每一行都由两个字段组成 ---- 国家及其首都:
+文件的每一行都由两个字段组成 --- 国家及其首都:
 \begin{shell}
     USSR    Moscow
     Canada  Ottawa
@@ -881,8 +881,8 @@ many inputs.}) 的方法之一.
 
 \subsection{\texttt{relfile}}
 \marginpar{106}
-为了回答分散在多张表中的数据库的问题, 我们必须知道每张表中包含什么内容,
-我们把这种信息存储在名为 \texttt{relfile} 的文件中 (``rel'' 指的是
+为了回答关于分散在多张表中的数据库的问题, 我们必须知道每张表中包含什么内容,
+我们把这些信息存储在名为 \texttt{relfile} 的文件中 (``rel'' 指的是
 ``relation''). 文件 \texttt{relfile} 包含了数据库中每张表的名字, 属性,
 如果表格不存在, 那么文件还包含了构造表格的规则. 文件 \texttt{relfile} 的
 内容是一系列的表格描述符, 表格描述符具有形式:
@@ -891,15 +891,15 @@ many inputs.}) 的方法之一.
     \indent\indent\textit{attribute} \par 
     \indent\indent\textit{attribute} \par 
     \indent\indent\indent ...   \par
-    \indent\indent\texttt{!}\texttt{command} \par
+    \indent\indent\texttt{!}\textit{command} \par
     \indent\indent\indent ...
 \end{pattern}
 \textit{tablename} 与 \textit{attribute} 都是字符串, 在 \textit{tablename} 
 之后是该表包含的属性名列表, 每一个属性名前面都有一个空格或制表符, 属性名
 之后是可选 的命令序列, 命令以感叹号开始, 它说明了如何构造这张表格.
 如果一张表不含构造命令, 则说明已经有一个文件以该表的名字命名, 且包含了
-该表的数据, 这样的表叫做 \cterm{基表} (\term{base table}), 数据可以插入
-到基表中, 也可以在表中更新数据, 在文件 \filename{relfile} 中, 如果某张表
+该表的数据, 这样的表叫做 \cterm{基表} (\term{base table}), 数据被插入
+到基表中, 并在基表中更新. 在文件 \filename{relfile} 中, 如果某张表
 在属性名之后出现了构造命令, 则称这张表是 \cterm{导出表} (\term{derived
 table}), 只有在必要时才会构造导出表.
 
@@ -923,7 +923,7 @@ table}), 只有在必要时才会构造导出表.
         !sort capitals >temp.capitals
         !join temp.countries temp.capitals >cc
 \end{file}
-这个文件说明数据库中有两张基表 ---- \filename{countries} 与
+这个文件说明数据库中有两张基表 --- \filename{countries} 与
 \filename{capitals}, 一张导出表 \filename{cc}, 导出表 \filename{cc} 通过 
 把基表排序并存放在临时文件中, 再对临时文件执行连接操作来生成, 也就是说, 
 \filename{cc} 通过执行
