get syntax right up to 112/210 pages

--- a/processing_words.tex
+++ b/processing_words.tex
@@ -82,11 +82,11 @@
     写一个程序, 该程序生成随机的桥牌手 (bridge hands).
 \end{exercise}
 
-\subsection{废话生成器\footnote{Cliche Generation}
+\subsection{废话生成器}
 \label{subsec:cliche_generation}
 
-我们的下一个例子是废话生成器, 它根据已有的废话重新创建一个新的出来.
-输入是一个句子集合:
+我们的下一个例子是废话生成器 (cliche generator),
+它根据已有的废话重新创建一个新的出来. 输入是一个句子集合:
 \begin{file}
     A rolling stone:gathers no moss.
     History:repeats itself.
