增加目录中三级标题 (subsection) 的缩进宽度

--- a/latex_src/preamble.tex
+++ b/latex_src/preamble.tex
@@ -160,7 +160,7 @@
 \newcommand\myexer{\textbf{习题\ }}
 
 % 设置目录中 subsection 的缩进
-\settowidth\cftsubsecindent{2}
+\settowidth\cftsubsecindent{2em}
 % 设置目录中 chapter 章节编号的宽度 (ctex 章节编号为中文, 需要特别注意).
 % 参考 <<LaTeX 入门>>, 刘海洋 编著, 电子工业出版社, 2013.6
 \settowidth\cftchapnumwidth{第十章} % 最宽的可能编号
