review stop at 113/210 pages

--- a/processing_words.tex
+++ b/processing_words.tex
@@ -128,7 +128,7 @@
 (\term{production})) 都具有形式\footnote{TODO}
 % TODO
 该产生式的意思是每一个 \textit{A} 都可以被 ``重写'' 为 \textit{B C D ...}.
-产生式左边的符号 (\texttt{A}) 称为 \cterm{非终止符} (\term{nonterminal}),
+产生式左边的符号 (\textit{A}) 称为 \cterm{非终止符} (\term{nonterminal}),
 它可以被进一步地扩展. 产生式右边的符号可以是非终止符 (可以是多个
 \textit{A}) 或 \cterm{终止符} (\term{terminal}), 终止符指的是不能被扩展的
 符号. 多个产生式可以共享同一个非终止符, 终止符与非终止符也可以在产生式的
