zoom in the table "Rport No. 3" in page 93/210

--- a/reports_and_databases.tex
+++ b/reports_and_databases.tex
@@ -192,6 +192,7 @@ Awk 可以从文件中挑选数据, 并将挑选到的数据格式化成报表. 
 假设我们需要为每一个大洲作一个汇总, 以及计算每一个国家占总人口与总面积的
 比重, 我们需要新增一个标题, 以及更多的列表头:
 \marginpar{93}
+{\small
 \begin{shell}
 Report No. 3       POPULATION, AREA, POPULATION DENSITY         January 1, 1988
 
@@ -226,6 +227,7 @@ Report No. 3       POPULATION, AREA, POPULATION DENSITY         January 1, 1988
  GRAND TOTAL                 2819      100.0      25681     100.0
                             =====     ======      =====    ======
 \end{shell}
+}
 
 我们仍然可以使用
 \mbox{准备}-\mbox{排序}-\mbox{格式化}
