get syntax right up to 115/210 page

--- a/preamble.tex
+++ b/preamble.tex
@@ -13,6 +13,9 @@
 \usepackage{caption}
 % for exercise 
 \usepackage{theorem}
+% for varwidth
+\usepackage{varwidth}
+\usepackage{tikz}
 
 % from package geometry
 % 为边注加边框
