重新定义 summary, 删除边框.
加上边框后, 如果边框跨页, 会输出多余的 "break" 字样, 非常不美观.
为了保证读者看到尽量完美的译本, 同时也为了尽量与英文原版的排版风格
保持一致, 删除 summary 环境的边框.

--- a/preamble.tex
+++ b/preamble.tex
@@ -23,8 +23,6 @@
 \usepackage{pifont}
 % 一页结束时, 脚注编号清零
 \usepackage[perpage]{footmisc}
-% 边框
-\usepackage[framemethod=default]{mdframed}
 
 % 脚注编号带圈
 \renewcommand\thefootnote{\ding{\numexpr171+\value{footnote}}}
@@ -98,11 +96,17 @@
 % 这不是我想要的效果, 请精通 LaTeX 的人帮忙修复这个问题.
 \newenvironment{summary}[1]
 {
-    \begin{mdframed}
+    \begin{center}
+        \rule{\textwidth}{2.0pt}
+    \end{center}
+    \vspace{-2.0em}
     \begin{center} \Large{#1} \end{center}%
 }
 {
-\end{mdframed}
+    \vspace{-1.2em}
+    \begin{center}
+        \rule{\textwidth}{2.0pt}
+    \end{center}
 }
 
 % term in English
