get synatex right up to 118/210 pages

--- a/processing_words.tex
+++ b/processing_words.tex
@@ -486,7 +486,7 @@ girl runs very very quickly'' 这样的句子可以用下面的语法来描述:
     function error(s) { printf("error: %s\n", s); exit }
 \end{awkcode}
 \marginpar{119}
-为了辨别出正确答案, 我们用 \texttt{^} 和 \texttt{$} 包围正则表达式, 否则的
+为了辨别出正确答案, 我们用 \texttt{\^} 和 \texttt{\$} 包围正则表达式, 否则的
 话, 只要用户的回答中含有与标准答案匹配的子字符串, 那么该回答就会被认为是
 正确的 (于是, \texttt{Ne}, \texttt{Na} 与 \texttt{N} 都会被当作标准答案
 \texttt{N}).
