删除 \break 的定义.
在 preamble.tex 中定义的 \break, 与 mdframed 宏包的 \break 命令重名,
导致 mdframed 在分页时, 在分页后的边框的左边显示多余的 "break" 字样,
删除自定义的 \break 命令, 多余的 "break" 就消失了.

--- a/the_awk_language.tex
+++ b/the_awk_language.tex
@@ -726,7 +726,7 @@ England 94      56      Europe
 \item[]     \verb'for ('\expr\verb'; '\expr\verb'; '\expr\verb') '\stmt
 \item[]     \verb'for ('\expr\verb' in '\textit{array}\verb')' \stmt
 \item[]     \verb'do '\stmt\ \verb'while ('\expr\verb')'
-\item[]     \break
+\item[]     \texttt{break}
 \item[]     \ctn
     \end{itemize}
 \end{summary}
