--- a/processing_words.tex
+++ b/processing_words.tex
@@ -5,7 +5,7 @@
 \marginpar{111}
 本章的程序指向一个共同主题: 文本处理. 示例程序涵盖的范围包括随机单词
 与句子的生成 (生成的句子可以和用户进行有限的对话), 以及文本处理. 大多数示例
-程序都很简单, 它们只是起说明作用, 但是, 其中一些文档准备程序的确拥有实际
+程序都很简单, 它们只是起说明作用, 但是, 其中一些文件准备程序的确拥有实际
 用途.
 
 \section{随机文本发生器}
@@ -501,7 +501,7 @@ girl runs very very quickly'' 这样的句子可以用下面的语法来描述:
 \section{文本处理}
 \label{sec:text_processing}
 
-由于强大的字符串处理能力, 对于涉及到文本处理与文档准备的工作来说, awk 是
+由于强大的字符串处理能力, 对于涉及到文本处理与文件准备的工作来说, awk 是
 一个非常有用的工具. 作为示例, 这一节包含的程序可以用于单词计数, 文本格式
 化, 交叉索引维护, 制作 KWIC 索引, 以及索引准备工作.
 
