把 "item" 翻译为 "条目", 而非 "项目"
"项目" 经常使人联想到工程中的 "项目", 而不是列表中的 "项目", "项目"
给人的感觉太 "重" 了, 而 "条目" 给人的感觉比较 "轻" 一些, 所以把
"item" 翻译会 "条目" 也许会更恰当一些.

--- a/reports_and_databases.tex
+++ b/reports_and_databases.tex
@@ -334,7 +334,7 @@ Report No. 3       POPULATION, AREA, POPULATION DENSITY         January 1, 1988
 累加总人口, 总人口比重, 总面积, 总面积比重, 这些信息在 \END 中被打印出来.
 
 \verb'form3' 在打印完每个大洲的汇总信息之后, 再打印合计信息, 但是一般情况
-下, 除非读取到一个新的大洲, 否则它不会知道是否已经处理完所有的项目, 
+下, 除非读取到一个新的大洲, 否则它不会知道是否已经处理完所有的条目, 
 解决这种 ``我们已经走得太远了 (We've gone too far)'' 问题是 control-break
 编程的经典例子. 解决办法是在打印之前检查每一个输入行, 判断是否需要为
 前一个数据组生成合计信息, 同样的检查也出现在了 \END 中, 所以计算工作最好
@@ -417,7 +417,7 @@ are, then do the positioning for you.}. 为打印机写一个 awk 程序, 该程
 
 如果可能的话, 我们建议构造一个程序来格式化表格, 实现一个像 \verb'tbl' 这样 
 复杂的程序的确很有野心, 但不妨让我们从一个小程序开始: 这个程序以左对齐的
-方式在列中打印项目, 如果是数值, 则右对齐, 并且在同一列中, 每一行的列宽度
+方式在列中打印条目, 如果是数值, 则右对齐, 并且在同一列中, 每一行的列宽度
 都是相同的 (都等于该列宽度的最大值). 如果给定头部与输入文件
 \filename{countries}, 程序的输出是\footnote{\filename{countries} 原来没有
 头部, 需要手工加上 --- 译者注}:
@@ -478,7 +478,7 @@ are, then do the positioning for you.}. 为打印机写一个 awk 程序, 该程
 \verb'i' 列的最大宽度) 为 \printf 构造格式字符串, 比如说, 如果列的最大宽度
 是 10, 则第 \verb'i' 列的格式字符串就是 \verb'%-10s' (假设该列是字母项).
 
-如果是数字项, 则要多做点工作: 第 \verb'i' 列的项目 \verb'v' 需要右对齐,
+如果是数字项, 则要多做点工作: 第 \verb'i' 列的条目 \verb'v' 需要右对齐,
 就像这样\footnote{TODO}
 %TODO
 \verb'v' 左边的空格数是 \verb'(wid[i]-nwid[i])/2', 所以 \verb'numjust' 会
