为 "输入文件" 与 "程序格式" 手工添加书签
原来的情况是, "输入文件" 与 "程序格式" 这两个小节没有经过 \section,
而直接到达 \subsection, 这样在制作书签时, "输入文件" 的级别被当成了
\section, 而 "程序格式" 虽然级别是 \subsection, 但在书签层次上,
"程序格式" 看起来就像是 "输入文件" 的子小节, 实际上它们是平级的,
一切的问题都是因为 "输入文件" 与 "程序格式" 的上层没有 \section.

现在的情况是, 使用不编号且不编目的 \subsection* 命令来定义 "输入文件"
与 "程序格式" 这两个小节, 手工为它们制作书签. 不过仍然有一点小问题,
那就是制作出的书签在缩进上看起来是与 \section 平级的, 但是没有编号,
但是与原来的情况相比, 已经好多了.

--- a/the_awk_language.tex
+++ b/the_awk_language.tex
@@ -28,7 +28,8 @@
 展开对动作的讨论. 剩下的小节包括函数定义, 输出, 输入, 以及 awk 如何调用其
 他程序. 大部分小节都包含对主要性质的总结.
 
-\subsection{输入文件\filename{countries}}
+\pdfbookmark[1]{输入文件}{the_input_file_countries}
+\subsection*{输入文件\filename{countries}}
 \label{subsec:the_input_file_countries}
 
 作为本章许多 awk 程序的输入数据, 我们将使用文件 \filename{countries}. 每一
@@ -56,7 +57,8 @@
 在这一章的剩下部分里, 如果没有显式给出输入数据, 默认将 \filename{countries}
 作为输入.
 
-\subsection{程序格式}
+\pdfbookmark[1]{程序格式}{program_format}
+\subsection*{程序格式}
 \label{subsec:program_format}
 
 \patact 语句, 以及动作内的语句通常用换行符分隔, 但是若干条语句也可
