review stop at 121/210 page

--- a/processing_words.tex
+++ b/processing_words.tex
@@ -606,10 +606,12 @@ like bibliographic citations, figures, tables, examples, and so on.}
 
 编写文档时, 作者为不同的条目创建并使用不同的符号名, 这些条目之后会被
 交叉引用. 因为名字是符号化的, 所以条目可以被添加, 删除, 重新编排, 而不用
-修改已存在的名字. 两个程序共同创建一个文本, 文本中的符号名被适当的数字
+修改已存在的名字. 本节所提出的交叉引用技术是使用两个程序共同创建一个文本,
+文本中的符号名被适当的数字
 所替代\footnote{原文为 Two programs create the version in which the
-symbolic names are replaced by suitable numbers}. 这里有一个示例文档,
-文档中包含了两个文献引用和一张图的符号名:
+symbolic names are replaced by suitable numbers. 原文显得有点突兀: 不经
+过渡就直接提到 ``Two programs ...''}.
+这里有一个示例文档, 文档中包含了两个文献引用和一张图的符号名:
 \marginpar{121}
 \begin{file}
     .#Fig _quotes_
@@ -659,7 +661,7 @@ symbolic names are replaced by suitable numbers}. 这里有一个示例文档,
 就可以得到带有数字形式引用的文档. 第二个程序的输出可以被重定向到打印机
 或文本格式化程序.
 \marginpar{122}
-上面所提到的示例文档输出是:
+上面所提到的示例文档的转换结果是:
 \begin{file}
     Figure 1 gives two brief quotations from famous books.
 
